# pypsv

./: README.md
examples/: 01 - Data input.ipynb  02 - PSV curves.ipynb  03 - Convergence diagnostics.ipynb  04 - Output and plotting.ipynb  05 - Changing the default parameters.ipynb
src/: pyproject.toml  requirements.txt
src/pypsv/: __init__.py  calibration_curves.py  convergence_report.py  output.py  parameters.py  plotting_helpers.py  psv_curve.py  utils.py
src/pypsv/fieldmodels/: __init__.py  archkalmag.py  covarch.py  fieldmodel.py  pfm9k2.py
