[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsv"
dynamic = ["version", "dependencies"]
authors = [
  { name="M. A. Schanner", email="arthus@gfz-potsdam.de" },
]
description = "Probabilistic paleo secular variation curves with python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "pypsv.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/arthus701/pypsv"
Issues = "https://github.com/arthus701/pypsv/issues"
